55 crate step to send e mail (#58)
* Refactor name activity stage and add config validaiton in interface

* Add validaiton of sendingEmail test validaiton

* Add validateConfig to unorderedCircle

* Increase test of GroupActivity

* Increase the coverage amount

* Remove not used step of circle of writers

* Remove reverse snowball action